--- a/dbt_/dbt_project.yml
+++ b/dbt_/dbt_project.yml
@@ -32,5 +32,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    shipments_overview:
       +materialized: view
